--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.bcilab.tremorapp"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -49,8 +49,7 @@ dependencies {
     //implementation 'com.github.haifengl:smile-core:2.5.1'
     //implementation 'com.github.haifengl:smile-core:2.5.1'
     implementation files('libs/dsp-collection.jar')
-    implementation files('libs/accessory-v2.3.2.jar')
-    //implementation 'de.dfki.mary:voice-cmu-slt-hsmm:5.2'
+    implementation 'de.dfki.mary:voice-cmu-slt-hsmm:5.2'
     implementation 'com.github.haifengl:smile-core:1.5.3'
 }
 
