저장소 권한 허용, 폴더 생성, 환자 추가, 환자 불러오기, 삭제모드, 환자 상세 값 넘겨주기

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     implementation files('libs/dsp-collection.jar')
     implementation 'de.dfki.mary:voice-cmu-slt-hsmm:5.2'
     implementation 'com.github.haifengl:smile-core:1.5.3'
+    implementation 'com.opencsv:opencsv:5.2'
 }
 
