--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         </activity>
         <activity android:name=".PersonalPatientActivity" />
         <activity android:name=".TaskSelectActivity" />
-        <activity android:name=".SpiralActivity"></activity>
+        <activity android:name=".SpiralActivity" />
+        <activity android:name=".ResultActivity"></activity>
     </application>
 
 </manifest>
