spiral 측정, 결과 제시

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".PersonalPatientActivity" />
         <activity android:name=".TaskSelectActivity" />
         <activity android:name=".SpiralActivity" />
-        <activity android:name=".ResultActivity"></activity>
+        <activity android:name=".ResultActivity" />
+        <activity android:name=".AnalysisActivity"></activity>
     </application>
 
 </manifest>
