--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -29,7 +29,8 @@
         <activity android:name=".TaskSelectActivity" />
         <activity android:name=".SpiralActivity" />
         <activity android:name=".ResultActivity" />
-        <activity android:name=".AnalysisActivity"></activity>
+        <activity android:name=".AnalysisActivity" />
+        <activity android:name=".Function.LineActivity"></activity>
     </application>
 
 </manifest>
