라인 테스트 후 결과 출력.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".SpiralActivity" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".AnalysisActivity" />
-        <activity android:name=".Function.LineActivity"></activity>
+        <activity android:name=".LineActivity"></activity>
     </application>
 
 </manifest>
