image 클릭시 확대 view 생성, home button 추가, 레이아웃 조정, date 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
         <activity
             android:name=".PersonalResultActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".example"></activity>
+        <activity android:name=".example" />
+        <activity android:name=".ImageViewActivity"></activity>
     </application>
 
 </manifest>
